--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'jacoco'
     id 'org.springframework.boot' version '3.3.3'
     id 'io.spring.dependency-management' version '1.1.6'
 }
@@ -10,6 +11,22 @@ version = '0.0.1-SNAPSHOT'
 java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(21)
+    }
+}
+
+jacoco {
+    toolVersion = '0.8.8'
+}
+
+test {
+    useJUnitPlatform() // JUnit 5 사용 시 필요
+    finalizedBy jacocoTestReport // 테스트가 끝난 후에 JaCoCo 보고서를 생성
+}
+
+jacocoTestReport {
+    dependsOn test // 테스트가 완료된 후에 실행되도록 설정
+    reports {
+        html.destination file("${buildDir}/jacocoHtml") // HTML 보고서 저장 경로
     }
 }
 
