--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,15 +20,15 @@ jobs:
       run: ./gradlew build -x test
 
     - name: Build Docker Image
-      run: docker build -t backend .
+      run: docker build -t art-server .
 
     - name: Login to Docker Hub
       run: echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
 
     - name: Push Docker Image to Docker Hub
       run: |
-        docker tag art-server ${{ secrets.DOCKER_HUB_USERNAME }}/backend:latest
-        docker push ${{ secrets.DOCKER_HUB_USERNAME }}/backend:latest
+        docker tag art-server ${{ secrets.DOCKER_HUB_USERNAME }}/art-server:latest
+        docker push ${{ secrets.DOCKER_HUB_USERNAME }}/art-server:latest
 
     - name: Set up gcloud
       uses: google-github-actions/setup-gcloud@v2
