--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,11 @@ jobs:
         docker tag art-server ${{ secrets.DOCKER_HUB_USERNAME }}/art-server:latest
         docker push ${{ secrets.DOCKER_HUB_USERNAME }}/art-server:latest
 
+    - name: Authenticate to Google Cloud
+      uses: google-github-actions/auth@v0
+      with:
+        credentials_json: ${{ secrets.GCP_SA_KEY }}
+
     - name: Set up gcloud
       uses: google-github-actions/setup-gcloud@v2
       with:
