--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,12 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build -x test
+      env:
+          SPRING_DATASOURCE_URL: ${{ secrets.DATASOURCE_URL }}
+          SPRING_DATASOURCE_USERNAME: ${{ secrets.DATASOURCE_USERNAME }}
+          SPRING_DATASOURCE_PASSWORD: ${{ secrets.DATASOURCE_PASSWORD }}
+          SPRING_API_GYEONGGIKEY: ${{ secrets.GYEONGGI_KEY }}
+          SPRING_API_GONGGONGKEY: ${{ secrets.GONGGONG_KEY }}
 
     - name: Build Docker Image
       run: docker build -t art-server .
