--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,12 +18,6 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build -x test
-      env:
-          SPRING_DATASOURCE_URL: ${{ secrets.DB_URL }}
-          SPRING_DATASOURCE_USERNAME: ${{ secrets.DB_USERNAME }}
-          SPRING_DATASOURCE_PASSWORD: ${{ secrets.DB_PASSWORD }}
-          SPRING_API_GYEONGGIKEY: ${{ secrets.GYEONGGI_API_KEY }}
-          SPRING_API_GONGGONGKEY: ${{ secrets.GONGGONG_API_KEY }}
 
     - name: Build Docker Image
       run: docker build -t art-server .
@@ -62,4 +56,11 @@ jobs:
           sudo docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/art-server:latest
 
           # 컨테이너 실행
-          sudo docker run --rm -d -p 80:8080 --name art-server ${{ secrets.DOCKER_HUB_USERNAME }}/art-server:latest
+          sudo docker run --rm -d -p 80:8080 \
+            --name art-server \
+            -e SPRING_DATASOURCE_URL=${{ secrets.DB_URL }} \
+            -e SPRING_DATASOURCE_USERNAME=${{ secrets.DB_USERNAME }} \
+            -e SPRING_DATASOURCE_PASSWORD=${{ secrets.DB_PASSWORD }} \
+            -e SPRING_API_GYEONGGIKEY=${{ secrets.GYEONGGI_API_KEY }} \
+            -e SPRING_API_GONGGONGKEY=${{ secrets.GONGGONG_API_KEY }} \
+            ${{ secrets.DOCKER_HUB_USERNAME }}/art-server:latest
