--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,8 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2'
     implementation 'org.glassfish.jaxb:jaxb-runtime:4.0.5'
+    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
+
 
 }
 
