--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,8 @@ dependencies {
     implementation 'org.glassfish.jaxb:jaxb-runtime:4.0.5'
     implementation 'org.apache.httpcomponents:httpclient:4.5.13'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
+    implementation platform('com.google.cloud:libraries-bom:26.48.0')
+    implementation 'com.google.cloud:google-cloud-storage'
 }
 
 tasks.named('test') {
