--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,4 +66,5 @@ jobs:
             -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
             -e GYEONGGI_API_KEY=${{ secrets.GYEONGGI_API_KEY }} \
             -e GONGGONG_API_KEY=${{ secrets.GONGGONG_API_KEY }} \
+            -e GCP_PROJECT_ID=${{ secrets.GCP_PROJECT_ID }} \
             ${{ secrets.DOCKER_HUB_USERNAME }}/art-server:latest
