--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,8 @@ dependencies {
     implementation 'com.google.cloud:google-cloud-storage'
     implementation 'org.jboss.logging:jboss-logging:3.4.1.Final'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+    implementation 'io.netty:netty-resolver-dns:4.1.114.Final'
+
 }
 
 tasks.named('test') {
