--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,13 @@ spring:
     redis:
       host: ${REDIS_HOST} # Redis 서버의 호스트 (기본값 localhost)
       port: 6379       # Redis 서버의 포트 (기본값 6379)
+      lettuce:
+        pool:
+          max-active: 8
+          max-idle: 8
+          min-idle: 0
+          time-between-eviction-runs: 30000ms
+        shutdown-timeout: 100ms
 
 major-museums:
   names:
