--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,8 +48,9 @@ jobs:
           sudo docker image prune -f
 
           # 컨테이너 실행
-          sudo docker run --rm -d -p 8080:8080 \
+          sudo docker run -d -p 8080:8080 \
             --name art-server \
+            --restart unless-stopped \
             -e DB_URL=${{ secrets.DB_URL }} \
             -e DB_USERNAME=${{ secrets.DB_USERNAME }} \
             -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
